--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BetterClassroom</title>
+    <title>BetterClassroom - Digitale Meldungen im Klassenzimmer</title>
+    <meta name="description" content="BetterClassroom revolutioniert die Interaktion im Klassenzimmer mit digitalen Meldungen und einem innovativen Lehrer-Dashboard." />
+    <meta name="keywords" content="BetterClassroom, digitale Meldungen, Klassenzimmer, Lehrer-Dashboard, Bildungstechnologie, Innovation, Schüler fortschritt, smart learning, smart, classroom" />
+    <meta name="author" content="BetterClassroom" />
+    <link rel="canonical" href="https://www.betterclassroom.de" />
   </head>
   <body>
     <div id="root"></div>
